--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
+                        <h2>5 star data!</h2>
                         <p>Launching a new company or developing the market position of an existing one can be quite an overwhelming processs at times.</p>
                         <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p>
                         <div class="testimonial-author">Louise Donovan - CEO</div>
